--- a/coursework.html
+++ b/coursework.html
@@ -95,7 +95,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="monitor"></i></div>
                             <div>
-                                <div class="cert-title">Introduction to Information Technology</div>
+                                <div class="cert-title">introduction to information technology</div>
                                 <div class="cert-issuer">IT-101</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -109,7 +109,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="shield-check"></i></div>
                             <div>
-                                <div class="cert-title">Information Security and Privacy [Honors]</div>
+                                <div class="cert-title">information security and privacy [honors]</div>
                                 <div class="cert-issuer">IT-203</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -123,7 +123,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="network"></i></div>
                             <div>
-                                <div class="cert-title">Introduction to Telecommunications, Networking and Security</div>
+                                <div class="cert-title">introduction to telecommunications, networking and security</div>
                                 <div class="cert-issuer">IT-215</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -137,7 +137,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="database"></i></div>
                             <div>
-                                <div class="cert-title">Database Administration</div>
+                                <div class="cert-title">database administration</div>
                                 <div class="cert-issuer">IT-240</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -151,7 +151,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="globe"></i></div>
                             <div>
-                                <div class="cert-title">Web Technologies</div>
+                                <div class="cert-title">web technologies</div>
                                 <div class="cert-issuer">IT-301</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -165,7 +165,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="scale"></i></div>
                             <div>
-                                <div class="cert-title">Societal and Ethical Issues in IT</div>
+                                <div class="cert-title">societal and ethical issues in it</div>
                                 <div class="cert-issuer">IT-302</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -179,7 +179,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="computer"></i></div>
                             <div>
-                                <div class="cert-title">Operating Systems</div>
+                                <div class="cert-title">operating systems</div>
                                 <div class="cert-issuer">IT-311</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -193,7 +193,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="handshake"></i></div>
                             <div>
-                                <div class="cert-title">Community Projects</div>
+                                <div class="cert-title">community projects</div>
                                 <div class="cert-issuer">IT-313</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -210,7 +210,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="radio"></i></div>
                             <div>
-                                <div class="cert-title">Advanced Telecommunications & Networking</div>
+                                <div class="cert-title">advanced telecommunications & networking</div>
                                 <div class="cert-issuer">IT-333</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -224,7 +224,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="shield"></i></div>
                             <div>
-                                <div class="cert-title">Advanced Cybersecurity</div>
+                                <div class="cert-title">advanced cybersecurity</div>
                                 <div class="cert-issuer">IT-460</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -238,13 +238,27 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="link"></i></div>
                             <div>
-                                <div class="cert-title">Internetworking</div>
+                                <div class="cert-title">internetworking</div>
                                 <div class="cert-issuer">IT-461</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
                         </div>
                         <div class="cert-description">
                             complex network interconnection, routing protocols, network troubleshooting, and wan technologies.
+                        </div>
+                    </div>
+
+                    <div class="cert-card">
+                        <div class="cert-header">
+                            <div class="cert-icon"><i data-lucide="cloud"></i></div>
+                            <div>
+                                <div class="cert-title">cloud computing in private networks</div>
+                                <div class="cert-issuer">IT-480</div>
+                                <div class="cert-date">James Madison University</div>
+                            </div>
+                        </div>
+                        <div class="cert-description">
+                            private cloud infrastructure, virtualization technologies, and enterprise cloud deployment strategies.
                         </div>
                     </div>
                 </div>
@@ -255,7 +269,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="bar-chart-3"></i></div>
                             <div>
-                                <div class="cert-title">Data Science & Machine Learning</div>
+                                <div class="cert-title">data science & machine learning</div>
                                 <div class="cert-issuer">IT-340</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -269,7 +283,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="user"></i></div>
                             <div>
-                                <div class="cert-title">Human-Computer Interaction</div>
+                                <div class="cert-title">human-computer interaction</div>
                                 <div class="cert-issuer">IT-347</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -286,7 +300,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="code"></i></div>
                             <div>
-                                <div class="cert-title">Introduction to Programming</div>
+                                <div class="cert-title">introduction to programming</div>
                                 <div class="cert-issuer">CS-149</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -300,7 +314,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="wrench"></i></div>
                             <div>
-                                <div class="cert-title">Data Structures and Advanced Programming for IT</div>
+                                <div class="cert-title">data structures and advanced programming for it</div>
                                 <div class="cert-issuer">IT-160E</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -314,7 +328,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="zap"></i></div>
                             <div>
-                                <div class="cert-title">Computational Structures and Logic</div>
+                                <div class="cert-title">computational structures and logic</div>
                                 <div class="cert-issuer">IT-201E</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -328,7 +342,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="plug"></i></div>
                             <div>
-                                <div class="cert-title">Digital Electronics</div>
+                                <div class="cert-title">digital electronics</div>
                                 <div class="cert-issuer">IT-212</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -345,7 +359,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="target"></i></div>
                             <div>
-                                <div class="cert-title">Capstone Design</div>
+                                <div class="cert-title">capstone design</div>
                                 <div class="cert-issuer">IT-444</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -359,7 +373,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="rocket"></i></div>
                             <div>
-                                <div class="cert-title">Capstone Implementation</div>
+                                <div class="cert-title">capstone implementation</div>
                                 <div class="cert-issuer">IT-445</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -373,7 +387,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="briefcase"></i></div>
                             <div>
-                                <div class="cert-title">Internship in Information Technology</div>
+                                <div class="cert-title">internship in information technology</div>
                                 <div class="cert-issuer">IT-433</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
@@ -390,7 +404,7 @@
                         <div class="cert-header">
                             <div class="cert-icon"><i data-lucide="lightbulb"></i></div>
                             <div>
-                                <div class="cert-title">Problem Solving in Science and Technology [Honors]</div>
+                                <div class="cert-title">problem solving in science and technology [honors]</div>
                                 <div class="cert-issuer">ISAT-160H</div>
                                 <div class="cert-date">James Madison University</div>
                             </div>
