Fix blinking caret by using hidden input overlay and update tab title to Linux terminal format

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>will j. jedrzejczak • terminal portfolio</title>
+    <title>will@portfolio: ~</title>
     <meta name="description" content="valedictorian-ranked b.s. it student at james madison university. aws professional services intern, mantech engineer, and cybersecurity analyst specializing in cloud infrastructure and federal technology.">
     <meta name="keywords" content="cloud developer, cyber threat analyst, it student, james madison university, federal defense, devsecops, ai/ml">
     
