Add simple view page and switch button - recruiter-friendly bullet point format

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="terminal.css">
 </head>
 <body>
+    <a href="simple.html" class="switch-btn" title="switch to simple view">s</a>
     <div id="terminal">
         <div class="terminal-output"></div>
     </div>
